--- a/index1/Index.html
+++ b/index1/Index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Latihan Css</title>
-  <link rel="Stylesheet" href="index2.css" >
+  <link rel="Stylesheet" href="Styles.css" >
 </head>
 <body>
   <div class="contain">
