--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="contain">
   <h1>Kenzie Nauval</h1>
-  <img src="../Project/Thumbnails/Foto.jpg" class="foto">
+  <img src="Files/Foto.jpg" class="foto">
   <h2>Deskripsi Diri</h2>
   <div class="diri">
   <ul>
